2006-02-21  Shreyas Srinivasan  <sshreyas@novell.com>

	* proxy.c: Fix more brokenness. doh check if its the proxy
	page. Need whack on the head for sucky reckless commit. 

2006-02-16  Shreyas Srinivasan  <sshreyas@novell.com>

	* proxy.c: Initialize connection only when the proxy tab is 
	clicked. 
	
2006-02-08  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	** See bug 326348
	* share-folder-common.c:(refresh_folder_tree)
	check if its a valid accoune before creating folder

2006-01-27  Andre Klapper <a9016009@gmx.de>
	* proxy-listing.glade:
	removed string "dialog1" from translation. Fixes bug 306118.

2006-01-18  Vivek Jain <jvivek@novell.com>
 	
 	* status-track.c : (add_detail): decode the date
 	to local time **Fixes #314755
 	also fixed some styling issues.

	Committed on behalf of Vivek - partha

2006-01-06  Simon Zheng <simon.zheng@sun.com>

	* junk-mail-settings.c:
	* mail-send-options.c:
	* proxy-login.c:
	* proxy.c:
	* proxy.h:
	* send-options.c:
	use libedataserver/e-account-list.h instead of e-util/e-account-list.h.
	use libedataserver/e-account.h instead of e-util/e-account.h.

2005-12-30  Andre Klapper <a9016009@gmx.de>

	* evolution/plugins/groupwise-features/properties.glade:
 	 Fixing several typos and harmonizing
	 capital/small letters. Partially fixes bug 306117.

2005-12-17  Tor Lillqvist  <tml@novell.com>

	* junk-settings.c
	* proxy-login.c
	* proxy.c
	* share-folder.c: Construct glade file name at run-time.

	* process-meeting.c (find_attendee): Use g_ascii_strcasecmp()
	instead of g_strcasecmp().

2005-12-12  Harish Krishnaswamy  <kharish@novell.com>

	* Makefile.am: Fix make-clean issues.

2005-12-05  Parthasarathi Susarla <sparthasarathi@novell.com>
	
	* proxy.c: initialize CamelException.

	Fixes bug #314576

2005-11-10  Harish Krishnaswamy  <kharish@novell.com>

	* mail-send-options.c: (org_gnome_compose_send_options):
	Function signature specifies a void return. So, do not 
	return NULL.
	